# RustAssignment-1

./: .gitignore  README.md
.github/workflows/: rust.yml
Assignemnt1/: Cargo.toml  main.rs
Assignment3/: Cargo.toml
Assignment3/src/: chack_leap.rs  externalheap.rs  linear_bineary.rs  main.rs  merge_sort.rs
Assignments/assignment10/: Cargo.toml
Assignments/assignment10/src/: hash.rs  lib.rs  test.rs
Assignments/assignment10/src/concept_with_question2/: add_duplicate.rs  nth_value.rs  palindrome_check.rs  remove_duplicate.rs  return_even.rs  rev_iterable.rs
Assignments/assignment10/src/hash_part/: hash.rs
Assignments/assignment11/: Cargo.toml
Assignments/assignment11/src/: datastore.rs  lib.rs  test.rs
Assignments/assignment12/: Cargo.toml
Assignments/assignment12/src/: asynchronously.rs  lib.rs  synchronously.rs  test.rs
Assignments/assignment13/: Cargo.toml
Assignments/assignment13/src/: lib.rs  test.rs
Assignments/assignment4/src/: duplicatechar.rs  is_plaindrome.rs  main.rs  rotate_string.rs
Assignments/assignment6/: Cargo.toml
Assignments/assignment6/src/: check_coordinates.rs  check_ipaddress.rs  lib.rs  test.rs
Assignments/assignment7/: Cargo.toml
Assignments/assignment7/src/: lib.rs  string_manipulation.rs  string_operation.rs  test.rs
Assignments/assignment8/: Cargo.toml
Assignments/assignment8/src/: error_handling.rs  (+2 more)
Assignments/assignment9/: Cargo.toml
assignment2/: Cargo.toml
assignment2/src/: fibo.rs  main.rs
assignment4/: Cargo.toml
assignment4/src/: duplicatechar.rs  is_plaindrome.rs  main.rs  rotate_string.rs
(+20 files in other folders)
