[package]
name = "assignment10"
version = "0.1.0"
authors = ["sonukumar-a11 <sonu.kumar@knoldus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simplelog  = "0.9.0"
env_logger = "0.8.3"
regex = "1.4.5"
